Study_Spring/ResponseUtils/src/main/java/com/example/ResponseUtils/response/error/BadRequestException.java
package com.example.ResponseUtils.response.error;

public class BadRequestException extends RuntimeException{
    public BadRequestException(ErrorResponseStatus status){
        super(status.getMessage());
    }
}
